samples/_failures_safe/1761174989_9d4c63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c7ebbee.c: In function ‘bounding_box_calculate’:
./samples/SAFE/__tmp_2c7ebbee.c:130:5: error: expected declaration or statement at end of input
  130 |     }
      |     ^
